[package]
name = "llc"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.8", optional = true }
ether-type = "0.1.3"
macro-bits = "0.1.5"
scroll = { version = "0.12.0", default-features = false }

[dev-dependencies]
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs", default-features = false }

[features]
defmt = ["dep:defmt"]
